[gd_scene load_steps=6 format=2]

[ext_resource path="res://Start_Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Title.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/mouse-click-153941.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Start_Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = 3.0
margin_right = 42.0
margin_bottom = 74.0
custom_constants/separation = 13

[node name="start" type="Button" parent="VBoxContainer"]
margin_right = 84.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="tutorial" type="Button" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 84.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "Tutorial"

[node name="quit" type="Button" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 84.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 1 )
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Stats" type="Button" parent="."]
margin_left = 549.0
margin_top = 331.0
margin_right = 633.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 1 )
text = "Stats"

[node name="reset" type="Button" parent="."]
margin_left = 6.0
margin_top = 331.0
margin_right = 144.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 1 )
text = "Reset Progress"

[node name="AcceptDialog" type="AcceptDialog" parent="reset"]
margin_left = 196.0
margin_top = -168.0
margin_right = 437.0
margin_bottom = -93.0
window_title = ""
dialog_text = "Do you want to reset your progress
(need restart)"

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Stats" to="." method="_on_Stats_pressed"]
[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]
[connection signal="confirmed" from="reset/AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
